--- a/views/unit.html
+++ b/views/unit.html
@@ -52,7 +52,7 @@
                 </div>
               <div class="gcb-col-3">
                 <p style="float:right; margin-top: 0px;">
-                  <a class="gcb-button gcb-button-primary" href="{{ lesson.notes }}" target="_blank">Text Version</a>
+                  <a class="gcb-button gcb-button-primary" href="{{ lesson.notes }}" target="_blank">Slides</a>
                 </p>
               </div>
             </div><!-- /gcb-cols -->
