--- a/views/base.html
+++ b/views/base.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <!-- FIXME: the title below should be changed to your course name. -->
-    <title>MyCourse100 - The Course</title>
-    <meta name="description" content="">
+    <title>BMED360</title>
+    <meta name="description" content="In vivo imaging and physiological modelling">
     <meta name="author" content="">
 
     <link href="/assets/css/main.css" rel="stylesheet" type="text/css">
@@ -47,7 +47,7 @@
         </h1>
         <h2>
           <!-- FIXME: add a header phrase of your choice here. -->
-          <a href="/">The Course</a>
+          <a href="/">BMED360</a>
         </h2>
         <span class="plusone-button" id="plusone-3" style="height: 15px; width: 70px; display: inline-block; text-indent: 0px; margin: 0px; padding: 0px; background-color: transparent; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; background-position: initial initial; background-repeat: initial initial; ">
           <g:plusone size="medium"></g:plusone>
@@ -63,7 +63,13 @@
             <a href="/announcements">Announcements</a>
           </li>
           <li {% if navbar.course %}class='active'{% endif %}>
-            <a href="/course">Course</a>
+            <a href="/course">Courseware</a>
+          </li>
+          <li {% if navbar.course %}class='active'{% endif %}>
+            <a href="/courseinfo">Course Info</a>
+          </li>
+          <li {% if navbar.course %}class='active'{% endif %}>
+            <a href="/wiki">Wiki</a>
           </li>
           <li {% if navbar.forum %}class='active'{% endif %}>
             <a href="/forum">Forum</a>
