--- a/views/base.html
+++ b/views/base.html
@@ -69,6 +69,9 @@
             <a href="/courseinfo">Course Info</a>
           </li>
           <li {% if navbar.course %}class='active'{% endif %}>
+            <a href="/resources">Resources</a>
+          </li>
+          <li {% if navbar.course %}class='active'{% endif %}>
             <a href="/wiki">Wiki</a>
           </li>
           <li {% if navbar.forum %}class='active'{% endif %}>
