--- a/views/courseinfo.html
+++ b/views/courseinfo.html
@@ -16,6 +16,52 @@ importance of mathematical models and computations in analysis and
 understanding of complex physiological processes, and the need of
 cross-disciplinary collaborations.
 
+<h2 class="product-headers">Learning Outcomes</h2>
+
+Students will be able to explain the physical principles of MRI and
+functional MRI imaging for exploration / estimation of the
+physiological and morphological parameters (e.g. k-space and pulse
+sequences, tensor estimation and eigen-decomposition, deconvolution,
+compartment modeling, statistical modeling, and geometric modeling).
+Students will also achieve practical knowledge of software and
+algorithms for quantitative analysis of image-based information in
+space and time, and be able to install and modify these programs for
+use in analysis and visualization of their own data. This knowledge is
+particularly linked to MATLAB and Python.
+
+After completion of the course the student should be able to:
+
+Present knowledge about
+
+Basic principles of MRI.
+Methdos for image analysis.
+Software tools for image processing.
+Skills and general competence
+
+Perform simple scripting and programming.
+Install and adapt image processing tools.
+Communicate and translate imaging problems between (i) a biological or
+medical formulation and (ii) a computational & algorithmic
+formulation.
+
+<h2 class="product-headers">Prerequisites</h2>
+Physics, computer science, mathematics or statistics, on bachelor
+level. Students with bachelor's degree in biology/life sciences, and
+strong interest and some previous experience in biomedical image
+analysis and programming could also be qualified.
+
+
+<h2 class="product-headers">Recommended previous knowledge</h2>
+
+General human physiology dealing with diffusion, perfusion and
+microcirculation. Basic knowledge of brain anatomy and
+neurophysiology, and molecular and cell biology. Background in
+mathematics (e.g. calculus & linear algebra) and some experience with
+using computers in biomedical applications (e.g. statistical packages,
+signal processing, etc.). Access to a computer with MATLAB and Image
+Processing Toolbox installed, in addition to Python/Sage.
+
+
 
 {% endblock %}
 
