--- a/views/wiki.html
+++ b/views/wiki.html
@@ -3,6 +3,28 @@
 {% block top_content %}
 
 
+  <div>
+    <div class="gcb-aux">
+      <div class="gcb-cols">
+        <div class="gcb-col-6">
+          <iframe id="wiki_embed"
+            src="javascript:void(0)"
+            scrolling="yes"
+            frameborder="0"
+            width="900"
+            height="700">
+	  </iframe>
+
+          <script type="text/javascript">
+            document.getElementById("wiki_embed").src =
+              "http://en.wikipedia.org"
+          </script>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 {% endblock %}
 
 {% block main_content %}
